[gd_scene load_steps=36 format=2]

[ext_resource path="res://scripts/environment/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/environment/GoblinSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/environment/WorldObjectSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/trail_background.png" type="Texture" id=4]
[ext_resource path="res://assets/tree_card_lower.png" type="Texture" id=5]
[ext_resource path="res://scenes/environment/LevelEnd.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/environment_sheet.png" type="Texture" id=7]
[ext_resource path="res://assets/tree_card_upper.png" type="Texture" id=8]
[ext_resource path="res://scenes/environment/FoilageSpawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/environment/ChickenSpawner.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/stone_wallbody.png" type="Texture" id=11]
[ext_resource path="res://assets/portcullis.png" type="Texture" id=12]
[ext_resource path="res://assets/stone_wallinterior.png" type="Texture" id=13]
[ext_resource path="res://assets/wooden_wall_background.png" type="Texture" id=14]
[ext_resource path="res://assets/wooden_wall_foreground.png" type="Texture" id=15]
[ext_resource path="res://assets/city_scene.png" type="Texture" id=16]
[ext_resource path="res://assets/mining_camp.png" type="Texture" id=17]

[sub_resource type="Curve" id=21]
min_value = 0.05
max_value = 0.1
_data = [ Vector2( 0, 0.1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.05 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=8]
min_value = 2.0
max_value = 4.0
_data = [ Vector2( 0, 4 ), 0.0, 0.0, 0, 0, Vector2( 1, 2 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=17]
min_value = 4.0
max_value = 8.0
_data = [ Vector2( 0, 8 ), 0.0, 0.0, 0, 0, Vector2( 1, 4 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=23]
min_value = 0.1
max_value = 1.1
_data = [ Vector2( 0, 1.1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=12]
min_value = 0.5
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=13]
min_value = 1.0
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=22]
min_value = 0.2
max_value = 2.1
_data = [ Vector2( 0, 2.1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.2 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=10]
min_value = 2.0
max_value = 6.0
_data = [ Vector2( 0, 6 ), 0.0, 0.0, 0, 0, Vector2( 1, 2 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=11]
min_value = 4.0
max_value = 12.0
_data = [ Vector2( 0, 12 ), 0.0, 0.0, 0, 0, Vector2( 1, 4 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=14]
min_value = 5.0
max_value = 10.0
_data = [ Vector2( 0, 5 ), 0.0, 0.0, 0, 0, Vector2( 1, 10 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=19]
min_value = 1.0
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=18]
min_value = 3.0
max_value = 5.0
_data = [ Vector2( 0, 5 ), 0.0, 0.0, 0, 0, Vector2( 1, 3 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=16]
min_value = 6.0
max_value = 10.0
_data = [ Vector2( 0, 10 ), 0.0, 0.0, 0, 0, Vector2( 1, 6 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=20]
min_value = 1.0
max_value = 3.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 3 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 480, 31 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 74, 3, 19, 21 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 102, 0, 15, 24 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -112.0 ]
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Ground" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Ground"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1440, 400 )

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 0, -161 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 1440, 132 )

[node name="Foreground" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
z_index = 1000
z_as_relative = false
motion_scale = Vector2( 1.25, 1 )
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Foreground"]
position = Vector2( 0, 158 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 1440, 132 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="ParallaxBackground"]
layer = 128

[node name="Foreground" type="ParallaxLayer" parent="ParallaxBackground/ParallaxBackground2"]
z_index = 1000
z_as_relative = false
motion_scale = Vector2( 1.25, 1 )
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxBackground2/Foreground"]
position = Vector2( 0, 158 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 1440, 132 )

[node name="MudSpawner" parent="." instance=ExtResource( 3 )]
first_spawn_time = SubResource( 21 )
min_timer = SubResource( 8 )
max_timer = SubResource( 17 )
object_name = 1

[node name="TopY" parent="MudSpawner" index="1"]
position = Vector2( 0, -31 )

[node name="BottomY" parent="MudSpawner" index="2"]
position = Vector2( 0, 21 )

[node name="RockSpawner" parent="." instance=ExtResource( 3 )]
first_spawn_time = SubResource( 23 )
min_timer = SubResource( 12 )
max_timer = SubResource( 13 )

[node name="TopY" parent="RockSpawner" index="1"]
position = Vector2( 0, -129 )

[node name="BottomY" parent="RockSpawner" index="2"]
position = Vector2( 0, 125 )

[node name="LogSpawner" parent="." instance=ExtResource( 3 )]
first_spawn_time = SubResource( 22 )
min_timer = SubResource( 10 )
max_timer = SubResource( 11 )
object_name = 2

[node name="TopY" parent="LogSpawner" index="1"]
position = Vector2( 0, -65 )

[node name="BottomY" parent="LogSpawner" index="2"]
position = Vector2( 0, 55 )

[node name="GoblinSpawner" parent="." instance=ExtResource( 2 )]
goblin_total = SubResource( 14 )
first_goblin_time = SubResource( 19 )
min_timer = SubResource( 18 )
max_timer = SubResource( 16 )
goblin_spawn_amount = SubResource( 20 )
y_spawn = 200

[node name="ChickenSpawner" parent="." instance=ExtResource( 10 )]
min_timer = 2.0
max_timer = 20.0

[node name="FoliageSpawner" parent="." instance=ExtResource( 9 )]
total = 100

[node name="Trail" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trail"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="LevelEnd" parent="." instance=ExtResource( 6 )]
position = Vector2( 3000, 0 )

[node name="LevelEndTimer" type="Timer" parent="."]
one_shot = true

[node name="FirstMarker" type="Sprite" parent="."]
position = Vector2( 0, -62 )
texture = SubResource( 2 )

[node name="SecondMarker" type="Sprite" parent="."]
position = Vector2( 0, -62 )
texture = SubResource( 3 )

[node name="LastMarker" type="Sprite" parent="."]
position = Vector2( 0, -62 )
texture = SubResource( 4 )

[node name="CityBG" type="Sprite" parent="."]
visible = false
texture = ExtResource( 16 )
offset = Vector2( -240, 0 )

[node name="SettlementBG" type="Sprite" parent="."]
visible = false
texture = ExtResource( 17 )
offset = Vector2( 240, 0 )

[node name="StoneWall" type="Sprite" parent="."]
visible = false
texture = ExtResource( 13 )
flip_h = true

[node name="Gate" type="Sprite" parent="StoneWall"]
texture = ExtResource( 12 )
flip_h = true

[node name="Exterior" type="Sprite" parent="StoneWall"]
texture = ExtResource( 11 )
flip_h = true

[node name="WoodWall" type="Sprite" parent="."]
visible = false
texture = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="WoodWall"]
z_index = 100
texture = ExtResource( 15 )

[connection signal="area_entered" from="Trail" to="." method="_on_Trail_area_entered"]
[connection signal="area_exited" from="Trail" to="." method="_on_Trail_area_exited"]
[connection signal="area_entered" from="LevelEnd" to="." method="_on_LevelEnd_area_entered"]
[connection signal="timeout" from="LevelEndTimer" to="." method="_on_LevelEndTimer_timeout"]

[editable path="MudSpawner"]
[editable path="RockSpawner"]
[editable path="LogSpawner"]
